<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignLeft="@id/dialog_layout_main"
        android:layout_alignTop="@+id/dialog_layout_main"
        android:layout_alignRight="@id/dialog_layout_main"
        android:layout_alignBottom="@+id/dialog_layout_main"
        android:scaleType="fitXY"
        android:src="@drawable/bg_dialog" />

    <LinearLayout
        android:id="@+id/dialog_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:id="@+id/linearAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <include
                    android:id="@+id/layout_native"
                    layout="@layout/layout_native_exit"
                    android:visibility="gone"/>

                <include
                    android:id="@+id/layout_native_fan"
                    layout="@layout/layout_fan_native_container"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/moreapp"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#2979FF"
                    android:text="@string/rateButtonText"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_below="@+id/camera"
                    android:layout_weight="1"
                    android:background="#2979FF"
                    android:textColor="#ffffff"
                    android:text="@string/exitButtonText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pleaserate"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/star" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>